--- a/Frontend/studentportal/src/Components/DashBoard/Dashboard.css
+++ b/Frontend/studentportal/src/Components/DashBoard/Dashboard.css
@@ -79,3 +79,16 @@ table tr:nth-child(even) {
 table tr:hover {
     background-color: #f2f2d5;
 }
+
+.pagination-buttons {
+    text-align: center;
+    margin-top: 20px;
+  }
+  
+  .pagination-buttons button {
+    padding: 5px 10px;
+    margin: 0 5px;
+    border: 1px solid #ddd;
+    background-color: #f1f1f1;
+    cursor: pointer;
+  }
